# Ct

./: .hgignore  CMakeLists.txt  CtVolume.cpp  CtVolume.h  CudaSettingsDialog.cpp  CudaSettingsDialog.h  FindFFTW.cmake  FindOpenCV.cmake  ImageView.cpp  ImageView.h  MainInterface.cpp  MainInterface.h  THIRD-PARTY-NOTICES.txt  Timer.cpp  Timer.h  Volume.cpp  Volume.h  cmakelists.txt  cuda_ct.cu  cuda_ct.h  cuda_test.cu  license.txt  main.cpp  readme.md  readme.txt
Common/: CompletionStatus.h  ImageView.cpp  ImageView.h  Timer.h  Types.h  Volume.h
Ct/: CtVolume.cpp  CtVolume.h  CudaSettingsDialog.cpp  CudaSettingsDialog.h  ImageView.h  MainInterface.cpp  MainInterface.h  ct.rc  cuda_ct.cu  cuda_ct.h  main.cpp  utility.cpp  utility.h
CtViewer/: ImportSettingsDialog.cpp  ImportSettingsDialog.h  ViewerInterface.cpp  ViewerInterface.h  ctviewer.rc  main.cpp
cmake/: AskForFFTWPath.cmake  AskForOpenCVPath.cmake  AskForQtPath.cmake  FFTWConfig.cmake  Macros.cmake
data/: uncompressed.tif  uncompressed16.tif
data/skullPhantom/: Proj_00000.tif  Proj_00001.tif  Proj_00002.tif  Proj_00003.tif  Proj_00004.tif  Proj_00005.tif  Proj_00006.tif  Proj_00007.tif  Proj_00008.tif  Proj_00009.tif  Proj_00010.tif  Proj_00011.tif  Proj_00012.tif  Proj_00013.tif  Proj_00014.tif  Proj_00015.tif  Proj_00016.tif  Proj_00017.tif  Proj_00018.tif  Proj_00019.tif  Proj_00020.tif  Proj_00021.tif  Proj_00022.tif  Proj_00023.tif  Proj_00024.tif  Proj_00025.tif  Proj_00026.tif  Proj_00027.tif  Proj_00028.tif  Proj_00029.tif  Proj_00030.tif  Proj_00031.tif  Proj_00032.tif  Proj_00033.tif  Proj_00034.tif  Proj_00035.tif  Proj_00036.tif  Proj_00037.tif  Proj_00038.tif  Proj_00039.tif  (+603 more)
deploy_ressources/general/: readme.txt
deploy_ressources/linux/: Run_Ct.sh  Run_CtViewer.sh
